--- a/SRPH-DataBase/DataBase.csproj
+++ b/SRPH-DataBase/DataBase.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SRPH_DataBase</RootNamespace>
-    <AssemblyName>SRPH-DataBase</AssemblyName>
+    <AssemblyName>DataBase</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
