--- a/GUI2DB/packages.config
+++ b/GUI2DB/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="db4o-cs-devel" version="8.1.184.15492" targetFramework="net452" />
   <package id="db4o-devel" version="8.1.184.15492" targetFramework="net452" />
+  <package id="db4o-nq-devel" version="8.1.184.15492" targetFramework="net452" />
 </packages>
