--- a/SRPH/SRPH.csproj
+++ b/SRPH/SRPH.csproj
@@ -110,6 +110,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GUI2DB\GUI2DB.csproj">
+      <Project>{1c616109-7977-47bc-8cb5-167dbf5f7706}</Project>
+      <Name>GUI2DB</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SRPH-DataBase\SRPH-DataBase.csproj">
+      <Project>{DDBAD3F1-CD89-472D-A99E-836F7002863C}</Project>
+      <Name>SRPH-DataBase</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
