--- a/GUI2DB/GUI2DB.csproj
+++ b/GUI2DB/GUI2DB.csproj
@@ -34,10 +34,7 @@
       <HintPath>..\packages\db4o-nq-devel.8.1.184.15492\lib\net40\Cecil.FlowAnalysis.dll</HintPath>
     </Reference>
     <Reference Include="Db4objects.Db4o">
-      <HintPath>..\..\..\Users\dbaczynski\Documents\Visual Studio 2015\Projects\BazaObiektowa\BazaObiektowa\Db4objects.Db4o.dll</HintPath>
-    </Reference>
-    <Reference Include="Db4objects.Db4o.CS">
-      <HintPath>..\..\..\Users\dbaczynski\Documents\Visual Studio 2015\Projects\BazaObiektowa\BazaObiektowa\Db4objects.Db4o.CS.dll</HintPath>
+      <HintPath>..\..\..\..\..\Desktop\Db40\db4o-8.0\bin\compact-3.5\Db4objects.Db4o.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil, Version=0.9.3.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <HintPath>..\packages\db4o-nq-devel.8.1.184.15492\lib\net40\Mono.Cecil.dll</HintPath>
