--- a/SRPH/SRPH.csproj
+++ b/SRPH/SRPH.csproj
@@ -131,6 +131,10 @@
     <Resource Include="Resources\images.png" />
     <Resource Include="Resources\zielone-tło_21138155.jpg" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
