Dodanie prototypów guzik ogólne poprawki przed oddaniem klientowi

--- a/SRPH/SRPH.csproj
+++ b/SRPH/SRPH.csproj
@@ -131,9 +131,14 @@
     <Resource Include="Resources\images.png" />
     <Resource Include="Resources\zielone-tło_21138155.jpg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\background.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\background2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
