--- a/SRPH-DataBase/SRPH-DataBase.csproj
+++ b/SRPH-DataBase/SRPH-DataBase.csproj
@@ -52,6 +52,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PaymentsSaver\PaymentsSaver.csproj">
+      <Project>{97cb113e-d33b-41d0-87e4-f59379f75206}</Project>
+      <Name>PaymentsSaver</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
